--- a/UNIDADES/UT5/Form 1/style.css
+++ b/UNIDADES/UT5/Form 1/style.css
@@ -6,7 +6,7 @@ input {
     border-radius: 5px;
     border-style: none;
 }
-.btn{
+ .botones button{
     min-width: 140px;
     margin-bottom: 5px;
 }
